# Channel-Emulation-Integration-With-SRSran

./: .gitignore  .gitmodules  README.md
k8s_srsran_open5gs/channel_emulation/: amf_memory_monitor.py  channel_client.py  mock_controller.py  moving_sionna_controller.py  noise_calibration_gr381.json  noise_math.py  noise_sweep_controller.py  sionna_moving.py  sionna_stationary.py  sionna_taps.py  stationary_sionna_controller.py  trajectory.py
k8s_srsran_open5gs/channel_emulation/noise_profiles/: noise_sweep.json
k8s_srsran_open5gs/channel_emulation/scenes/: stationary_reflector.json
k8s_srsran_open5gs/containers/srsue-channel/: Dockerfile
k8s_srsran_open5gs/containers/srsue-live/: Dockerfile
k8s_srsran_open5gs/experiment_framework/: __init__.py  config.py  failures.py  lifecycle.py  modes.py  plots.py  provenance.py  runner.py  settings.py  summarize.py  traffic.py
k8s_srsran_open5gs/experiments/: README.md  benchmark-parameters.json
k8s_srsran_open5gs/experiments/conditions/: baseline.json  controlled-noise.json  fixed-attenuation-6db.json  fixed-multipath-80.json  moving-sionna.json  moving-ue.json  noise-sweep.json  static-reflections-off.json  static-reflections-on.json  stationary-sionna.json
k8s_srsran_open5gs/experiments/measurement-profiles/: dynamic-channel.json  noise-sweep.json  standard.json
k8s_srsran_open5gs/experiments/schema/: condition.schema.json  study.schema.json
k8s_srsran_open5gs/experiments/studies/: stage8-pilot.json
k8s_srsran_open5gs/gr-sionna-channel/include/: CMakeLists.txt
k8s_srsran_open5gs/gr-sionna-channel/python/: CMakeLists.txt  qa_sparse_channel.py
k8s_srsran_open5gs/gr-sionna-channel/python/bindings/: sionna_channel_swig.i
k8s_srsran_open5gs/testbed-automator/: install.sh
k8s_srsran_open5gs/tests/: measure_gr38_noise_power.py  test_amf_memory_monitor.py  test_fixed_channel.py  test_fixed_multipath.py  test_live_channel_control.py  test_moving_sionna_controller.py  test_sionna_api.py  test_sparse_channel.py  test_stage4_overlay.py  test_stage6_overlay.py  test_stage8_config.py  test_stage8_lifecycle.py  test_stage8_monitoring.py  test_stage8_results.py  test_stage8_runner_design.py  test_stage8_traffic.py  test_stationary_sionna_controller.py  test_trajectory.py
src/: neural_receiver.py
srsran_open5gs/channel_emulation/: amf_memory_monitor.py  channel_client.py  mock_controller.py  moving_sionna_controller.py  noise_calibration_gr381.json  noise_math.py  noise_sweep_controller.py  sionna_moving.py  sionna_radio_config.py  sionna_scene.py  sionna_stationary.py  sionna_taps.py  stationary_sionna_controller.py  trajectory.py
srsran_open5gs/docs/: live-pilot-preflight.md
srsran_open5gs/experiment_framework/: __init__.py  condition_modes.py  config.py  experiment_runner.py  lifecycle.py  modes.py  monitoring.py  provenance.py  results.py  runner.py  settings.py  summarize.py
srsran_open5gs/experiments/: benchmark-parameters.json  parameter-cleanup-report.md
srsran_open5gs/gr-sionna-channel/: CMakeLists.txt
srsran_open5gs/gr-sionna-channel/include/gnuradio/sionna_channel/: sparse_channel_cc.h
srsran_open5gs/gr-sionna-channel/lib/: CMakeLists.txt  dense_channel_cuda.cu  dense_channel_cuda.h  qa_sparse_channel.cc  sparse_channel_cc_impl.cc  sparse_channel_cc_impl.h
srsran_open5gs/gr-sionna-channel/python/: qa_sparse_channel.py
srsran_open5gs/gr-sionna-channel/python/bindings/: sionna_channel_swig.i
srsran_open5gs/gr-sionna-channel/python/sionna_channel/: __init__.py
srsran_open5gs/scripts/: set_cgroup_cpu.sh
srsran_open5gs/testbed-automator/: install.sh  uninstall.sh
srsran_open5gs/tests/: test_experiment_config.py  test_experiment_lifecycle.py  test_experiment_monitoring.py  test_experiment_results.py  test_experiment_runner_design.py  test_experiment_traffic.py  test_live_channel_control.py  test_live_channel_overlay.py  test_live_channel_protocol.py  test_moving_sionna_controller.py  test_noise_channel_overlay.py  test_noise_control.py  test_noise_math.py  test_noise_protocol.py  test_noise_sweep_controller.py  test_radio_endpoints_config.py  test_sionna_api.py  test_sionna_moving.py  test_sionna_radio_config.py  test_sionna_taps.py  test_stationary_sionna_controller.py  test_symbol_timing.py  test_trajectory.py
traces/: moving_munich_test.npz  static_munich_test.npz
(+69 files in other folders)
